2003-11-21  Lluis Sanchez Gual <lluis@ximian.com>

	* SoapReader.cs: Little fix.
	* SoapWriter.cs: Use ObjectIDGenerator instead of a couple of Hashtable.

2003-11-21  Lluis Sanchez Gual <lluis@ximian.com>

	* SoapFormatter.cs: Added FilterLevel property.

2003-11-16  Lluis Sanchez Gual <lluis@ximian.com>

	* SoapFormatter.cs: Added AssemblyFormat property.

2003-11-13  Lluis Sanchez Gual <lluis@ximian.com>

	* ObjectWriter.cs: Added FIXME
	* SoapParser.cs: Added null reference check.

2002-08-15  Tim Coleman <tim@timcoleman.com>
	* SoapFormatter.cs:
		That should be IRemotingFormatter, not IRemoteFormatter.
		Some stubs to make it compile on linux.
	* TODOAttribute.cs:
		Added this class to this assembly.

2002-07-23  Duncan Mak  <duncan@ximian.com>

	* SoapFormatter.cs: This implements IFormatter and IRemoteFormatter.